# TMN

./: .clang-format  .gitignore  .gitlab-ci.yml  .gitmodules  .nvimrc  Build.bat  BuildAllMac.sh  BuildAllWindows.bat  BuildProject.bat  BuildProject.sh  CMakeLists.txt  README.md  TMNE.10x  TMNE.code-workspace  build.bat  build_all.bat  build_windows.bat  design_notes.txt  generate_builds.bat
Data/: TestImage.ppm
Data/RaytracerTest/: 2_2_2023_0_35_4_360.ppm
Documents/: CodeDesignNotes.txt  GameDesignNotes.txt
Source/: CoreLogging.h  CoreTypes.h  Main.c
Source/Core/: Allocator.cpp  Allocator.h  Colour.cpp  Colour.h  Container.h  Core.TMNE_BUILD  Core.h  CoreLibs.cpp  CoreMath.cpp  CoreMath.h  CoreTypes.h  Hashing.cpp  Hashing.h  Log.h  Logging.cpp  Logging.h  Math.h  Maths.h  Memory.h  Platform.h  Profiling.h  Types.h  Unicode.cpp  Unicode.h
Source/Core/Allocator/: Allocator.cpp
Source/Core/Container/: Array.h  DynamicArray.h  HashTable.h  Span.h  String.cpp  String.h
Source/Core/Math/: Math.cpp  Maths.cpp
Source/Core/Memory/: Allocator.cpp  Allocator.h  Memory.cpp
Source/Core/Platform/: PlatformFile.h  PlatformUnicode.h  PlatformWindows.cpp  Unicode.cpp
Source/Raytracer/: BuildRaytracerWindows.bat  Raytracer.TMNE_BUILD  RaytracerMain.cpp
Tools/TMNEBuild/Source/: TMNEBuild.csproj  TMNEBuildMain.cs
code/: Types.h  build.bat  build_all_windows.bat  main.c  main.cpp  platform.h
code/Core/: CMakeLists.txt  Core.cpp  Platform.h  Types.h  Unicode.h
code/Core/Include/: Allocator.hpp  AllocatorVirtualMemory.hpp  Platform.hpp  Unicode.hpp
code/Core/Source/: AllocatorVirtualMemory.cpp  Core.cpp  PlatformLinux.cpp  PlatformWindows.cpp  Unicode.cpp
code/Raytracer/: CMakeLists.txt
code/Raytracer/Source/: main.cpp
code/core/: math.h  memory.c  memory.h  string.h
code/engine/: build_engine_windows.bat  core.h  platform.h
code/engine/core/: math.c  (+10 more)
code/platform/: allocators.inl
code/raytracer/: build_raytracer_windows.bat  raytracer.c
debug/: code_generator_debug.rdbg  unit_tester_debug.rdbg
docs/: DesignNotes.txt
tools/code_generation/: code_generator.c
tools/unit_testing/: unit_tester.c
(+15 files in other folders)
